--- a/GameData/MEVHeavyIndustries/1.0.0.0.htm
+++ b/GameData/MEVHeavyIndustries/1.0.0.0.htm
@@ -24,7 +24,7 @@ title="GitHub IO" alt="Pages" /></a></p>
 - <code>&lt;Archival&gt;</code> edition</h1>
 <ul>
 <li>Released</li>
-<li>on: 18 Jan 2021</li>
+<li>on: 14 Jan 2021</li>
 <li>for: Kerbal Space Program 1.11.0</li>
 <li>by <a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/206520-*/">Cyne</a></li>
@@ -33,6 +33,18 @@ href="https://forum.kerbalspaceprogram.com/index.php?/profile/206520-*/">Cyne</a
 <b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/MEVHeavyIndustries/files">CurseForge</a></p></div>
 
 <h2 id="summary">Summary</h2>
+<ul>
+<li>Initial release by Cyne</li>
+</ul>
+<h3 id="status">Status</h3>
+<ul>
+<li><p><em>No changelog provided</em></p></li>
+<li><p>Issues</p>
+<ul>
+<li>updates #9 - Archival Releases</li>
+<li>closes #11 - 1.0.0.0-release <code>&lt;Archival&gt;</code></li>
+</ul></li>
+</ul>
 <h3 id="changes">Changes</h3>
 <hr />
 <h2 id="see-more">See More</h2>
