--- a/GameData/MEVHeavyIndustries/1.0.99.0.htm
+++ b/GameData/MEVHeavyIndustries/1.0.99.0.htm
@@ -33,7 +33,14 @@ title="GitHub IO" alt="Pages" /></a></p>
 <b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/MEVHeavyIndustries/files">CurseForge</a></p></div>
 
 <h2 id="adoption-by-zer0kerbal">Adoption by zer0Kerbal</h2>
-<h3 id="localization-10990">Localization 1.0.99.0</h3>
+<h3 id="summary">Summary</h3>
+<ul>
+<li>search for 'mev' in editor for all parts</li>
+<li>part tags</li>
+<li>updated, linted, and reorganized</li>
+<li>parts/addon now fully localized (en-us only)</li>
+</ul>
+<h3 id="localization">Localization</h3>
 <ul>
 <li>Localization directory and contents
 <ul>
@@ -63,7 +70,7 @@ title="GitHub IO" alt="Pages" /></a></p>
 <li>closes #35 - Create Agency</li>
 <li>update #14 - Localization - Master</li>
 </ul>
-<h3 id="documantation-10990">Documantation 1.0.99.0</h3>
+<h3 id="documantation">Documantation</h3>
 <ul>
 <li>Create GitHub Pages
 <ul>
@@ -88,7 +95,7 @@ title="GitHub IO" alt="Pages" /></a></p>
 <li>closes #7 - Create GitHub Pages</li>
 <li>closes #8 - Create HeroLogo.png</li>
 </ul>
-<h3 id="parts-1099">Parts 1.0.9.9</h3>
+<h3 id="parts">Parts</h3>
 <ul>
 <li>part.cfg linting and reorganization</li>
 <li>create Assets/ folder</li>
@@ -110,6 +117,19 @@ title="GitHub IO" alt="Pages" /></a></p>
 <li>duplicate models</li>
 </ul></li>
 <li>relocate part.cfg to Parts/</li>
+<li>Add
+<ul>
+<li>&lt;ghostParts.cfg&gt; v1.3.0.0
+<ul>
+<li>part names changed, this should prevent damage to save games.</li>
+</ul></li>
+<li>&lt;Resources.cfg&gt; v1.0.0.0
+<ul>
+<li>If Community Resource Pack (KSPIE) is not installed adds resources
+for the Daedulus (this is a kludge)</li>
+<li>includes the localization strings for these resources</li>
+</ul></li>
+</ul></li>
 <li>closes #2 - Part Asset Updates</li>
 </ul>
 <h3 id="archival-releases">Archival Releases</h3>
@@ -122,7 +142,7 @@ title="GitHub IO" alt="Pages" /></a></p>
 </ul></li>
 <li>closes #9 - Archival Releases</li>
 </ul>
-<h3 id="status-10990">Status 1.0.99.0</h3>
+<h3 id="status">Status</h3>
 <ul>
 <li>Issues
 <ul>
@@ -152,7 +172,7 @@ and news</li>
 title="Issue Tracker">Known Issues</a> for known issues and feature
 requests</li>
 </ul>
-<h2 id="localization">Localization</h2>
+<h2 id="localization-1">Localization</h2>
 <blockquote>
 <ul>
 <li><img
