--- a/GameData/MEVHeavyIndustries/readme.htm
+++ b/GameData/MEVHeavyIndustries/readme.htm
@@ -35,6 +35,10 @@ src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColo
 title="GitHub IO" alt="Pages" /></a></p>
 <h1 id="mev-heavy-industries-mev">MEV Heavy Industries (MEV)</h1>
 <p>Daedalus, Bussard and Epstein drives for Kerbal Space Program.</p>
+<p>Daedalus drive requires <a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/172026-*/"
+title="KSP Interstellar Extended (KSPIE)">KSP Interstellar
+Extended</a></p>
 <h2 id="by-zer0kerbal-originally-by-cyne">By <a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
 title="zer0Kerbal"><code>zer0Kerbal</code></a>, originally by <a
