--- a/GameData/MEVHeavyIndustries/Attributions.htm
+++ b/GameData/MEVHeavyIndustries/Attributions.htm
@@ -8,24 +8,24 @@
 <h2 id="attribution">Attribution</h2>
 <h3 id="credits">Credits</h3>
 <ul>
-  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/206520-*/"><img border="0" alt="Cyne" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2022_05/ApplicationFrameHost_Df3bIsYxEU-min.thumb.png.8c1d47d489d63a3947f1fb22ae46da03.png" width="50px" height="50px" > Cyne</a> for creating the <a href="https://forum.kerbalspaceprogram.com/index.php?/topic/209730-*/" alt="MEV Heavy Industries (MEV)">MEV Heavy Industries</a> (MEV) part addon</li>
+  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/206520-*/"><img alt="Cyne" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2022_05/ApplicationFrameHost_Df3bIsYxEU-min.thumb.png.8c1d47d489d63a3947f1fb22ae46da03.png" width="50px" height="50px" > Cyne</a> for creating the <a href="https://forum.kerbalspaceprogram.com/index.php?/topic/209730-*/" alt="MEV Heavy Industries (MEV)">MEV Heavy Industries</a> (MEV) part addon</li>
   <li><i>Thank you to everyone who gave feedback! It's very important for me and highly appreciated.</i></li>
 </ul>
 
 <h3 id="flags">Flag(s)</h3>
 <ul>
-  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/206520-*/"><img border="0" alt="Cyne" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2022_05/ApplicationFrameHost_Df3bIsYxEU-min.thumb.png.8c1d47d489d63a3947f1fb22ae46da03.png" width="50px" height="50px" > Cyne</a></li>
-  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"><img border="0" alt="zer0Kerbal" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2018_08/free-clipart-hithhikers-guide-14.thumb.jpg.05fc7d1bdc37ce2bfca8923bf1e97303.jpg" width="50" height="50" > zer0Kerbal</a></li>
+  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/206520-*/"><img alt="Cyne" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2022_05/ApplicationFrameHost_Df3bIsYxEU-min.thumb.png.8c1d47d489d63a3947f1fb22ae46da03.png" width="50px" height="50px" > Cyne</a></li>
+  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"><img alt="zer0Kerbal" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2018_08/free-clipart-hithhikers-guide-14.thumb.jpg.05fc7d1bdc37ce2bfca8923bf1e97303.jpg" width="50" height="50" > zer0Kerbal</a></li>
 </ul>
 
 <h3 id="agency">Agency</h3>
 <ul>
-  <li><a href="(https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/)"><img border="0" alt="zer0Kerbal" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2018_08/free-clipart-hithhikers-guide-14.thumb.jpg.05fc7d1bdc37ce2bfca8923bf1e97303.jpg" width="50" height="50" > zer0Kerbal</a></li>
+  <li><a href="(https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/)"><img alt="zer0Kerbal" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2018_08/free-clipart-hithhikers-guide-14.thumb.jpg.05fc7d1bdc37ce2bfca8923bf1e97303.jpg" width="50" height="50" > zer0Kerbal</a></li>
 </ul>
 
 <h3 id="special-thanks">Special Thanks</h3>
 <ul>
-  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/70516-captainkipard/"><img border="0" alt="Captain Kipard" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_12_2015/itsame.png.3227b08e54fc9e3eaa0c6c2ad8e9ad07.thumb.png.5d3a3eb0344a23048ea58826e47b9781.png" width="50" height="50" > Captain Kipard</a> for the <a href="https://forum.kerbalspaceprogram.com/index.php?/topic/85372-*/"> Mod Development Links Compilation</a> and other tutorials.</li>
+  <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/70516-*/"><img alt="Captain Kipard" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_12_2015/itsame.png.3227b08e54fc9e3eaa0c6c2ad8e9ad07.thumb.png.5d3a3eb0344a23048ea58826e47b9781.png" width="50" height="50" > Captain Kipard</a> for the <a href="https://forum.kerbalspaceprogram.com/index.php?/topic/85372-*/"> Mod Development Links Compilation</a> and other tutorials.</li>
   <li>Squad, for making such a great game!</li>
   <li>Everyone else who made modding tutorials.</li>
 </ul>
@@ -44,8 +44,3 @@
 <ul>
   <li>none</li>
 </ul>
-
-
-
-
-
